Issue #304: Replaced a java.util.Map